--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bible. Thessalonians'
 - !lcc 'BS'
+- GITenberg
 title: Weymouth New Testament in Modern Speech, 2 Thessalonians
 url: http://www.gutenberg.org/ebooks/8841
